fixed #97 Table width "auto", width are visible in first th row

--- a/src/tableview/tableview.styl
+++ b/src/tableview/tableview.styl
@@ -1,3 +1,8 @@
+span#ruler
+    visibility: hidden
+    white-space: nowrap
+    font-size : 12px
+
 .tableview:before
     content  : ""
     position : absolute
